fix: extra space

--- a/src/features/components/templates/navigation/tab-nav-without-border/styles.scss
+++ b/src/features/components/templates/navigation/tab-nav-without-border/styles.scss
@@ -3,6 +3,7 @@
         display: none !important;
     }
 }
-.swiper_wrapper_navigation {
+.wrapper_navigation {
     position: relative;
+    min-width: 20rem;
 }
